static/css/shame.css
.position-relative {
  position: relative;
}

.hero-absolute {
  position: absolute;
  z-index: -1;
  left: 3rem;
}


.color-bg-secondary {
  background-color: rgba(247,233,182,.5);
  color: #444;
}

.link {
  color: #535fd7;
  text-decoration: underline;
}

.link:hover,
.link:focus {
  cursor: pointer;
}

.social-links {
  flex-basis: 100%;
  margin: 2em 0;
}

.social-link + .social-link {
  margin-left: 1em;
}

.dangerously h2 {
  margin-bottom: -.25em;
  font-size: 1.125em;
  font-weight: 400;
}
.dangerously hr {
  margin-top: 1.75em;
  margin-bottom: 2em;
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #E0E0E0;
  padding: 0;
}

.dangerously a {
  text-decoration: underline;
}

#service hr {
  margin-top: 1.5em;
  margin-bottom: 1.5em;
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #E0E0E0;
  padding: 0;
}

.registered-trademark {
  font-size: .5em;
  vertical-align: top;
  display: inline-block;
  padding-left: 2px;
  margin-top: 4px;
}

.emoji {
  margin-right: .5em;
  font-size: 20px;
}

[id]:before {
    display: block;
    content: "";
    margin-top: -120px;
    height: 120px;
    visibility: hidden;
}

.hero {
  padding-top: 76px;
}

@media (min-width: 768px) {
  .hero {
    padding-top: 164px;
    padding-bottom: 64px;
  }
}

.box {
  max-width: 440px;
  margin-top: 3em;
  margin-left: auto;
  margin-right: auto;
  padding: 1em 1em 1.5em;
  box-shadow: 0 3px 6px 1px rgba(0,0,0,0.08), 0 7px 14px 1px rgba(50,50,93,0.1);
  background-color: white;
}

.box h1 {
  margin-top: 0;
  font-size: 32px;
}

.box p {
  font-size: 18px;
}



.switch {
  position: relative;
  order: 3;
  margin-left: 1em;
}

.cart-caret {
  display: none;
}
.open .cart-caret {
  display: block;
  overflow: hidden;
  position: absolute;
  bottom: -21px;
  left: 0;
  width: 100%;
  height: 10px;
  z-index: 1;
}
@media (min-width: 1220px) {
  .open .cart-caret {
    bottom: -19px;
  }
}
.cart-caret::after {
  content: "";
  display: block;
  position: absolute;
  z-index: 5;
  bottom: -4px;
  left: 12px;
  border: 1px solid rgba(0,0,0,.1);
  width: 12px;
  height: 12px;
  background: white;
  transform: rotate(45deg);
  transform-origin: 0 0;
  z-index: 1;
}

.dropdown.hidden {
  opacity: 0;
  visibility: hidden;
  transform: scale(0.8);
}
.dropdown {
  position: absolute;
  top: 48px;
  right: 0;
  width: 280px;
  background-color: #FFF;
  box-shadow: 0 0 0 1px rgba(38,43,49,0.05), 0 2px 7px 1px rgba(38,43,49,0.15);
  opacity: 1;
  visibility: visible;
  border-radius: 4px;
  transform: scale(1);
  transform-origin: 280px 0px 0px;
  transition-property: transform, opacity, -webkit-transform;
  transition-duration: .2s;
  transition-timing-function: ease-in-out;
}



@media (max-width:767px) {
  .bg-image {
    background: url('../../static/img/programmer-male.svg') no-repeat bottom center;
    background-size: contain;
  }
  .wrap.mt7,
  .wrap.mv7 {
    margin-top: 3.5em;
  }
}

@media (min-width:768px) {
  .bg-image {
    background: url('../../static/img/undraw_before_dawn_bqrj.svg') no-repeat center center fixed;
    background-size: 800px;
  }
}

.section-title {
  font-weight: 600;
  letter-spacing: 1.5px;
  margin-bottom: 1.25em;
  text-transform: uppercase;
  max-width: 500px;
  margin-left: auto;
  margin-right: auto;
}

.lowlight {
  margin-top: 3.2em;
  font-size: 80%;
  max-width: 800px;
  max-height: 560px;
  overflow-x: auto;
  border: 1px solid #b7b7b7;
  box-shadow: 0 2px 8px rgba(0,0,0,.2), 0 4px 14px rgba(0,0,0,.4);
}

.undraw {
  max-width: 70%;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 1em;
}

.undraw--mini {
  max-width: 200px;
}

.platform-feature {
  height: 100%;
  padding: 1.5rem 2rem;
  margin-bottom: 2rem;
  background: white;
  box-shadow: 0 1px 6px rgba(0,0,0,.05), 0 3px 10px rgba(0,0,0,.1);
  border: 3px solid transparent;
  transition: all .2s ease;
}

.platform-feature:hover {
  box-shadow: 0 2px 8px rgba(0,0,0,.05), 0 4px 14px rgba(0,0,0,.1);
  border: 3px solid #f3d299;
  margin-top: -8px;
}

.platform-feature h2 {
  margin-top: 0 !important;
  font-size: 1.5rem;
}

.platform-feature p,
.platform-feature .link {
  font-size: 14px;
}

.platform-feature .link {
  font-size: 14px;
  line-height: 1;
}


@media (min-width: 680px) {
  .undraw {
    width: 39%;
    margin-left: initial;
    margin-right: 1.5em;
  }
  .platform-feature {
    align-self: flex-start;
    width: 48%;
  }
}

@media (min-width: 1024px) {
  .platform-feature {
    width: 23%;
  }
}

